--- a/.github/workflows/ci_tests_dev.yaml
+++ b/.github/workflows/ci_tests_dev.yaml
@@ -161,11 +161,19 @@ jobs:
 
       # Pull baseline image data from dvc remote (DAGsHub)
       - name: Pull baseline image data from dvc remote
+        id: dvc-pull
+        continue-on-error: true
         run: |
           dvc remote modify upstream url https://${DAGSHUB_TOKEN}@dagshub.com/GenericMappingTools/pygmt.dvc --local
           dvc pull --no-run-cache --verbose && ls -lhR pygmt/tests/baseline/
         env:
           DAGSHUB_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
+
+      - name: Download DVC cache as artifacts from GitHub
+        if: steps.dvc-pull.outcome == 'failure'
+        run: |
+          gh run download --name dvc-cache --dir .dvc/cache/
+          dvc checkout --verbose
 
       # Download cached remote files (artifacts) from GitHub
       - name: Download remote data from GitHub
