--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -174,6 +174,7 @@ jobs:
       - name: Download DVC cache as artifacts from GitHub
         if: steps.dvc-pull.outcome == 'failure'
         run: |
+          rm -rvf .dvc/cache/
           gh run download --name dvc-cache --dir .dvc/cache/
           uv run dvc checkout --verbose
         env:
