--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -49,13 +49,11 @@ jobs:
         fetch-depth: 0
         persist-credentials: false
 
-    - name: Set up Python
+    - name: Set up Python and install dependencies
       uses: actions/setup-python@v6.1.0
       with:
         python-version: '3.13'
-
-    - name: Install dependencies
-      run: python -m pip install build
+        pip-install: build
 
     # This step is only necessary for testing purposes and for TestPyPI
     - name: Fix up version string for TestPyPI
