--- a/.github/workflows/type_checks.yml
+++ b/.github/workflows/type_checks.yml
@@ -44,20 +44,19 @@ jobs:
         uses: actions/setup-python@v6.1.0
         with:
           python-version: '3.13'
-
-      - name: Install packages
-        run: |
           # Need to install four groups of packages:
           # 1. required packages
           # 2. optional packages
           # 3. type checker and stub packages
           # 4. other packages that are used somewhere in PyGMT
-          python -m pip install \
+          pip-install: |
             numpy pandas xarray packaging \
             contextily geopandas ipython pyarrow rioxarray \
             mypy pandas-stubs pyarrow-stubs \
             matplotlib pytest
-          python -m pip list
+
+      - name: List install packages
+        run: python -m pip list
 
       - name: Static type check
         run: make typecheck
