--- a/.github/workflows/ci_tests_dev.yaml
+++ b/.github/workflows/ci_tests_dev.yaml
@@ -128,11 +128,11 @@ jobs:
           mkdir build
           cd build
           cmd.exe /c "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-          cmake -G Ninja .. ^
-            -DCMAKE_INSTALL_PREFIX=%GMT_INSTALL_DIR% ^
-            -DCMAKE_BUILD_TYPE=Release ^
-            -DCMAKE_PREFIX_PATH=%MAMBA_ROOT_PREFIX%\envs\pygmt\Library ^
-            -DGMT_ENABLE_OPENMP=TRUE ^
+          cmake -G Ninja .. \
+            -DCMAKE_INSTALL_PREFIX="$GMT_INSTALL_DIR" \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DCMAKE_PREFIX_PATH="$MAMBA_ROOT_PREFIX/envs/pygmt/Library" \
+            -DGMT_ENABLE_OPENMP=TRUE \
             -DGMT_USE_THREADS=TRUE
           cmake --build .
           cmake --build . --target install
