--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -70,7 +70,7 @@ jobs:
           --exclude "^https://www.researchgate.net/"
           --exclude "^https://zenodo.org/badge/DOI/"
           --exclude "^https://stackoverflow.com/a/69170441"
-          --no-progress
+          --verbose
           "repository/*.md"
           "repository/**/*.py"
           "documentation/dev/**/*.html"
